@@ -34,7 +34,10 @@ for small to large scale projects.
 /usr/share/man/*/yate.*
 /etc/rc.d/init.d/yate
 %dir /usr/lib/yate
-/usr/lib/yate/*.*
+%dir /usr/lib/yate/modules
+/usr/lib/yate/modules/*.*
+%dir /usr/lib/yate/scripts
+/usr/lib/yate/scripts/*.*
 
 %post
 ldconfig
@@ -53,10 +56,10 @@ The yate-client package includes the files needed to use YATE as a VoIP client
 %files client
 %defattr(-, root, root)
 /usr/bin/yate-gtk2
-%dir /usr/lib/yate/skin
-/usr/lib/yate/skin/*
-%dir /usr/lib/yate/gtk2
-/usr/lib/yate/gtk2/*
+%dir /usr/lib/yate/modules/skin
+/usr/lib/yate/modules/skin/*
+%dir /usr/lib/yate/modules/gtk2
+/usr/lib/yate/modules/gtk2/*
 
 %package devel
 Summary:	Development package for yate
@@ -116,6 +119,10 @@ cp -p %{_builddir}/%{name}/yate.init %{buildroot}/etc/rc.d/init.d/yate
 rm -rf %{buildroot}
 
 %changelog
+* Mon Nov 07 2005 Paul Chitescu <paulc-devel@null.ro>
+- Version 0.9.0-pre4
+- Separated modules and scripts directories
+
 * Mon Oct 24 2005 Paul Chitescu <paulc-devel@null.ro>
 - Version 0.9.0-pre3
 - Changed obsolete Copyright: tag to License: to keep newer RPMs happy
